# STERO-Projekt-2

./: README.md
STERO-Projekt-2/src/stero_mobile/: CMakeLists.txt  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  package.xml
STERO-Projekt-2/src/stero_mobile/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
STERO-Projekt-2/src/stero_mobile/launch/: korytarz.launch  labirynt.launch  project1.launch  tiago_simple2.launch  tiago_simple3.launch
STERO-Projekt-2/src/stero_mobile/maps/: korytarz.yaml  labirynt.yaml
STERO-Projekt-2/src/stero_mobile/src/: listener.cpp
STERO-Projekt-2/src/stero_mobile/worlds/: korytarz.world  labirynt.world
STERO-Projekt-2/src/stero_mobile/worlds/Korytarz/: model.config  model.sdf
STERO-Projekt-2/src/stero_mobile/worlds/Labirynt/: model.config  model.sdf
